[style]: Fix margin on mobile

--- a/css/pages/aproveitamentos.css
+++ b/css/pages/aproveitamentos.css
@@ -91,6 +91,7 @@ section.pointedSection {
 	display: flex;
 	flex-direction: column;
 	gap: 10px;
+	margin-left: 1em;
 }
 
 .procedimentos .content .imageWrapper {
